Ensure events have default prevented, added context for focussing and blurring elements. Adjusted CSS to only show highlight on active containers.

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -7,7 +7,7 @@ li {
     display: block;
 }
 
-li.selected {
+.activeContext li.selected {
     background: blue;
     color: white;
 }
